fixed white space issue

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -420,6 +420,7 @@ video {
 
 html {
   font-family: "Raleway", sans-serif;
+  background-color: black;
 }
 
 *, ::before, ::after{
